# SugoiDict

./: .gitignore  CMakeLists.txt
lib/: sqlite3.lib
src/: common.h  database.cpp  database.h  main.cpp  tts_module.cpp  tts_module.h
